# AdevnetOfCode-haskell-2022

./: aoc2022hs.cabal  flake.nix
app/: Day10.hs  Day11.hs  Day12.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
