cabal-version:      2.4
name:               aoc2022hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             TheKK
maintainer:         thumbd03803@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc
    main-is:          Main.hs

    ghc-options:
      -rtsopts
      -fllvm
      -fdicts-strict
      -fmax-worker-args=16
      -fspec-constr-recursive=16
      -- -fplugin=Fusion.Plugin
      -- -threaded

    -- Modules included in this executable, other than Main.
    other-modules:
      Day3
      Day4
      Day5
      Day6
      Day7
      Day8
      Day9
      Day10
      Day11
      Day12

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15, parallel, MemoTrie, containers, deepseq, streamly, text, split, optparse-applicative, vector, array, foldl, optics
    hs-source-dirs:   app
    default-language: Haskell2010
